k8s/webserver.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mirrorsparteklabsio-web
spec:
  ports:
    - protocol: TCP
      name: mirrorsparteklabsio-web
      port: 80
  selector:
    app: mirror-sparteklabs-io
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: acmeProd
  name: mirrorsparteklabsio-web
spec:
  rules:
  - host: mirror.sparteklabs.io
    http:
      paths:
      - backend:
          service:
            name: mirrorsparteklabsio-web
            port:
              number: 80
        path: /
        pathType: Prefix
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mirror-sparteklabs-io
  labels:
    app: mirror-sparteklabs-io
spec:
  selector:
    matchLabels:
      app: mirror-sparteklabs-io
  template:
    metadata:
      labels:
        app: mirror-sparteklabs-io
    spec:
      containers:
        - imagePullPolicy: Always
          name: web-0
          image: nginx:latest
          # readinessProbe:
          #   failureThreshold: 3
          #   successThreshold: 1
          #   initialDelaySeconds: 0
          #   timeoutSeconds: 1
          #   periodSeconds: 15
          #   httpGet:
          #     scheme: HTTP
          #     port: 80
          volumeMounts:
            - mountPath: "/usr/share/nginx/html"
              name: webroot
            - name: config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
      # affinity:
      restartPolicy: Always
      volumes:
        - name: config
          configMap:
            defaultMode: 420
            name: nginx-index
        - name: webroot
          persistentVolumeClaim:
            claimName: mirror-sparteklabs-io-webroot
            readOnly: true
  replicas: 1
